@@ -18,6 +18,14 @@
   </aether:resolve>
   <import file="${ball:parent:xml}"/>
 
+  <target name="http-delete"
+          description="--> Invokes &lt;http-delete/&gt; task."
+          depends="jar-classes">
+    <taskdef classpathref="build.classpath"
+             resource="ball/http/ant/defaults.properties"/>
+    <http-delete classpathref="build.classpath"/>
+  </target>
+
   <target name="http-get"
           description="--> Invokes &lt;http-get/&gt; task."
           depends="jar-classes">
@@ -32,5 +40,13 @@
     <taskdef classpathref="build.classpath"
              resource="ball/http/ant/defaults.properties"/>
     <http-post classpathref="build.classpath"/>
+  </target>
+
+  <target name="http-put"
+          description="--> Invokes &lt;http-put/&gt; task."
+          depends="jar-classes">
+    <taskdef classpathref="build.classpath"
+             resource="ball/http/ant/defaults.properties"/>
+    <http-put classpathref="build.classpath"/>
   </target>
 </project>
